# resources/model_participant_data_relationships.go
@@ -1,0 +1,158 @@
+/*
+test
+
+example
+
+API version: 0.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the ParticipantDataRelationships type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ParticipantDataRelationships{}
+
+// ParticipantDataRelationships struct for ParticipantDataRelationships
+type ParticipantDataRelationships struct {
+	User ParticipantDataRelationshipsUser `json:"user"`
+}
+
+type _ParticipantDataRelationships ParticipantDataRelationships
+
+// NewParticipantDataRelationships instantiates a new ParticipantDataRelationships object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewParticipantDataRelationships(user ParticipantDataRelationshipsUser) *ParticipantDataRelationships {
+	this := ParticipantDataRelationships{}
+	this.User = user
+	return &this
+}
+
+// NewParticipantDataRelationshipsWithDefaults instantiates a new ParticipantDataRelationships object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewParticipantDataRelationshipsWithDefaults() *ParticipantDataRelationships {
+	this := ParticipantDataRelationships{}
+	return &this
+}
+
+// GetUser returns the User field value
+func (o *ParticipantDataRelationships) GetUser() ParticipantDataRelationshipsUser {
+	if o == nil {
+		var ret ParticipantDataRelationshipsUser
+		return ret
+	}
+
+	return o.User
+}
+
+// GetUserOk returns a tuple with the User field value
+// and a boolean to check if the value has been set.
+func (o *ParticipantDataRelationships) GetUserOk() (*ParticipantDataRelationshipsUser, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.User, true
+}
+
+// SetUser sets field value
+func (o *ParticipantDataRelationships) SetUser(v ParticipantDataRelationshipsUser) {
+	o.User = v
+}
+
+func (o ParticipantDataRelationships) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ParticipantDataRelationships) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["user"] = o.User
+	return toSerialize, nil
+}
+
+func (o *ParticipantDataRelationships) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"user",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varParticipantDataRelationships := _ParticipantDataRelationships{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varParticipantDataRelationships)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ParticipantDataRelationships(varParticipantDataRelationships)
+
+	return err
+}
+
+type NullableParticipantDataRelationships struct {
+	value *ParticipantDataRelationships
+	isSet bool
+}
+
+func (v NullableParticipantDataRelationships) Get() *ParticipantDataRelationships {
+	return v.value
+}
+
+func (v *NullableParticipantDataRelationships) Set(val *ParticipantDataRelationships) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableParticipantDataRelationships) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableParticipantDataRelationships) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableParticipantDataRelationships(val *ParticipantDataRelationships) *NullableParticipantDataRelationships {
+	return &NullableParticipantDataRelationships{value: val, isSet: true}
+}
+
+func (v NullableParticipantDataRelationships) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableParticipantDataRelationships) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
