# resources/model_participant_data_relationships_user.go
@@ -1,0 +1,159 @@
+/*
+test
+
+example
+
+API version: 0.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the ParticipantDataRelationshipsUser type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ParticipantDataRelationshipsUser{}
+
+// ParticipantDataRelationshipsUser struct for ParticipantDataRelationshipsUser
+type ParticipantDataRelationshipsUser struct {
+	// Link to user
+	Links string `json:"links"`
+}
+
+type _ParticipantDataRelationshipsUser ParticipantDataRelationshipsUser
+
+// NewParticipantDataRelationshipsUser instantiates a new ParticipantDataRelationshipsUser object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewParticipantDataRelationshipsUser(links string) *ParticipantDataRelationshipsUser {
+	this := ParticipantDataRelationshipsUser{}
+	this.Links = links
+	return &this
+}
+
+// NewParticipantDataRelationshipsUserWithDefaults instantiates a new ParticipantDataRelationshipsUser object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewParticipantDataRelationshipsUserWithDefaults() *ParticipantDataRelationshipsUser {
+	this := ParticipantDataRelationshipsUser{}
+	return &this
+}
+
+// GetLinks returns the Links field value
+func (o *ParticipantDataRelationshipsUser) GetLinks() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Links
+}
+
+// GetLinksOk returns a tuple with the Links field value
+// and a boolean to check if the value has been set.
+func (o *ParticipantDataRelationshipsUser) GetLinksOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Links, true
+}
+
+// SetLinks sets field value
+func (o *ParticipantDataRelationshipsUser) SetLinks(v string) {
+	o.Links = v
+}
+
+func (o ParticipantDataRelationshipsUser) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ParticipantDataRelationshipsUser) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["links"] = o.Links
+	return toSerialize, nil
+}
+
+func (o *ParticipantDataRelationshipsUser) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"links",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varParticipantDataRelationshipsUser := _ParticipantDataRelationshipsUser{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varParticipantDataRelationshipsUser)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ParticipantDataRelationshipsUser(varParticipantDataRelationshipsUser)
+
+	return err
+}
+
+type NullableParticipantDataRelationshipsUser struct {
+	value *ParticipantDataRelationshipsUser
+	isSet bool
+}
+
+func (v NullableParticipantDataRelationshipsUser) Get() *ParticipantDataRelationshipsUser {
+	return v.value
+}
+
+func (v *NullableParticipantDataRelationshipsUser) Set(val *ParticipantDataRelationshipsUser) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableParticipantDataRelationshipsUser) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableParticipantDataRelationshipsUser) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableParticipantDataRelationshipsUser(val *ParticipantDataRelationshipsUser) *NullableParticipantDataRelationshipsUser {
+	return &NullableParticipantDataRelationshipsUser{value: val, isSet: true}
+}
+
+func (v NullableParticipantDataRelationshipsUser) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableParticipantDataRelationshipsUser) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
